coderprabhu-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coderprabhu-api-app
  labels:
    app: coderprabhu-api
spec:
  selector:
    matchLabels:
      app: coderprabhu-api
      tier: api
  template:
    metadata:
      labels:
        app: coderprabhu-api
        tier: api
    spec:
      containers:
      - name: coderprabhu-api-app
        image: gcr.io/kubegcp-256806/coderprabhu-api:v3
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.05"
            memory: "128Mi"
          limits:
            cpu: "0.3"  
            memory: "192Mi"
