coderprabhu-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coderprabhu-ui-web
  labels:
    app: coderprabhu-ui
spec:
  selector:
    matchLabels:
      app: coderprabhu-ui
      tier: web
  template:
    metadata:
      labels:
        app: coderprabhu-ui
        tier: web
    spec:
      containers:
      - name: coderprabhu-ui-app
        image: gcr.io/kubegcp-256806/coderprabhu-ui:v11
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.05"
            memory: "24Mi"
          limits:
            cpu: "0.2"  
            memory: "128Mi"
