coderprabhu-api-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coderprabhu-api-backend
  labels:
    app: coderprabhu-api
spec:
  type: NodePort
  selector:
    app: coderprabhu-api
    tier: api
  ports:
  - name: httpapiport
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: httpsapiport
    protocol: TCP
    port: 443
    targetPort: 8080
