coderprabhu-ui-backend-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: coderprabhu-ui-backend
  labels:
    app: coderprabhu-ui
spec:
  type: NodePort
  selector:
    app: coderprabhu-ui
    tier: web
  ports:
  - name: httpuiport
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: httpsuiport
    protocol: TCP
    port: 443
    targetPort: 8080
