allprojects-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allprojects-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: allprojects-ip
    networking.gke.io/managed-certificates: "whatsgoodonmenudotcommanagedcert2025,whatsgoodonmenuapimanagedcert2025,wwwwhatsgoodonmenudotcommanagedcert2025, tornacampsitesdotcommanagedcert, wwwtornacampsitesdotcommanagedcert, coderprabhudotcommanagedcert, coderprabhuwwwdotcommanagedcert, coderprabhuapidotcommanagedcert, newapitornacampsitesdotcommanagedcert, homepagetornacampsitesdotcommanagedcert, carrentaltornacampsitesdotcommanagedcert, realestatetornacampsitesdotcommanagedcert, hospitalityto [...]
    networking.gke.io/v1beta1.FrontendConfig: allprojects-ingress-security-config
  labels:
    app: allprojects
spec:
  rules:
  - host: whatsgoodonmenu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: menu-ui-backend
              port:
                name: httpuiport
  - host: www.whatsgoodonmenu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: menu-ui-backend
              port:
                name: httpuiport
  - host: api.whatsgoodonmenu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: menu-api-backend
              port:
                name: httpapiport
  - host: www.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: new-camp-ui-backend
              port:
                name: httpuiport
  - host: tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: new-camp-ui-backend
              port:
                name: httpuiport
  - host: www.coderprabhu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: coderprabhu-ui-backend
              port:
                name: httpuiport
  - host: coderprabhu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: coderprabhu-ui-backend
              port:
                name: httpuiport
  - host: api.coderprabhu.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: coderprabhu-api-backend
              port:
                name: httpapiport
  - host: newapi.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: camp-newapi-backend
              port:
                name: httpapiport
  - host: homepage.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: rentalui-homepage
              port:
                name: http
  - host: car-rental.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: rentalui-car-rental
              port:
                name: http
  - host: real-estate.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: rentalui-real-estate
              port:
                name: http
  - host: hospitality.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: rentalui-hospitality
              port:
                name: http
  - host: jewelry.tornacampsites.com
    http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: rentalui-jewelry
              port:
                name: http
