coderprabhu-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coderprabhu-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: coderprabhu-ip
    networking.gke.io/managed-certificates: "coderprabhudotcommanagedcert,coderprabhuapidotcommanagedcert,coderprabhuwwwdotcommanagedcert,campcoderprabhudotcommanagedcert,campapicoderprabhudotcommanagedcert,menucoderprabhudotcommanagedcert,whatsgoodonmenudotcommanagedcert,wwwwhatsgoodonmenudotcommanagedcert,tornacampsitesdotcommanagedcert,wwwtornacampsitesdotcommanagedcert,apitornacampsitesdotcommanagedcert"
   # ingress.kubernetes.io/target-proxy: coderprabhu-http-lb-proxy
  labels:
    app: coderprabhu-ui
spec:
  rules:
  - host: www.coderprabhu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: coderprabhu-ui-backend
            servicePort: httpuiport
  - host: coderprabhu.com
    http:
      paths: 
        - path: /*      
          backend:
            serviceName: coderprabhu-ui-backend
            servicePort: httpuiport
  - host: api.coderprabhu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: coderprabhu-api-backend
            servicePort: httpapiport
  - host: camp.coderprabhu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: camp-ui-backend
            servicePort: httpuiport            
  - host: api.tornacampsites.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: camp-api-backend
            servicePort: httpapiport            
  - host: www.tornacampsites.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: camp-ui-backend
            servicePort: httpuiport    
  - host: tornacampsites.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: camp-ui-backend
            servicePort: httpuiport            
  - host: campapi.coderprabhu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: camp-api-backend
            servicePort: httpapiport  
  - host: menu.coderprabhu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: menu-ui-backend
            servicePort: httpuiport            
  - host: whatsgoodonmenu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: menu-ui-backend
            servicePort: httpuiport            
  - host: www.whatsgoodonmenu.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: menu-ui-backend
            servicePort: httpuiport
